精简例子中的日志

--- a/tougao/Emacs查看日志常用命令.org
+++ b/tougao/Emacs查看日志常用命令.org
@@ -31,147 +31,6 @@ tramp标示文件的语法为: =/[protocol]:[user@]hostname[#port]:path-to-file=
   [4627|09:38:32:557462||         ./src/logger.cpp|0298|  eInfo]=========================================================================
   [4627|09:38:32:576258||     ./src/recvmbwork.cpp|0085|  eInfo]enter CRecvMbWork::doWork
   [4627|09:38:32:576560||     ./src/recvmbwork.cpp|0088| eDebug]Init CNAPS2DB cnaps2 1a119bb03ab93a12
-  [4627|09:38:32:576851||     ./src/recvmbwork.cpp|0117|  eInfo]szBizCode = [0531]
-  [4627|09:38:32:604968||     ./src/recvmbwork.cpp|0414|  eInfo]enter CRecvMbWork::GetPtTrcd
-  [4627|09:38:32:967495||     ./src/recvmbwork.cpp|0414|  eInfo]leave CRecvMbWork::GetPtTrcd[退出]
-  [4627|09:38:32:967821||     ./src/recvmbwork.cpp|0655|  eInfo]属于大小额业务！
-  [4627|09:38:33:327498||     ./src/recvmbbase.cpp|0107|  eInfo]enter CRecvMbBase::doWork
-  [4627|09:38:33:328095||     ./src/npspubfunc.cpp|1510|  eInfo]enter NPSNS::SensitiveMsgPro
-  [4627|09:38:33:330611||     ./src/npspubfunc.cpp|1715|  eInfo]leave NPSNS::SensitiveMsgPro[正确退出]
-  [4627|09:38:33:381312||     ./src/recvmbbase.cpp|0116| eDebug]i get a msg[<?xml version="1.0" encoding="UTF-8"?>
-  <service>
-  <sys-header>
-  <data name="SYS_HEAD">
-  <struct>
-  <data name="TRAN_DATE">
-  <field type="string" length="8" scale="0" pin="false">20161028</field>
-  </data>
-  <data name="SERVICE_SCENE">
-  <field type="string" length="2" scale="0" pin="false">15</field>
-  </data>
-  <data name="CONSUMER_ID">
-  <field type="string" length="6" scale="0" pin="false">200015</field>
-  </data>
-  <data name="BILL_AND_CHEQUE_STRUCT">
-  ...很长一段XML报文...
-  </data>
-  <data name="GLOBAL_ID">
-  <field type="string" length="30" scale="0" pin="false"></field>
-  </data>
-  <data name="PAYEE_ACCT_OPEN_BRANCH_ID">
-  <field type="string" length="20" scale="0" pin="false">313513080408</field>
-  </data>
-  <data name="CCY">
-  <field type="string" length="3" scale="0" pin="false">CNY</field>
-  </data>
-  <data name="ACC_BRANCH_ID">
-  <field type="string" length="30" scale="0" pin="false">00001</field>
-  </data>
-  <data name="EMERGENCY_FLAG">
-  <field type="string" length="1" scale="0" pin="false">0</field>
-  </data>
-  <data name="PAYEE_TRAN_BRANCH_ID">
-  <field type="string" length="20" scale="0" pin="false">313513080408</field>
-  </data>
-  <data name="PAYER_ADDR">
-  <field type="string" length="150" scale="0" pin="false">1</field>
-  </data>
-  <data name="COMMISSION_PAY_ACCT">
-  <field type="string" length="50" scale="0" pin="false"></field>
-  </data>
-  </struct>
-  </data>
-  </body>
-  </service>
-  ]
-  [4627|09:38:33:390837||     ./src/recvmbbase.cpp|0218|  eInfo]enter CRecvMbBase::GetMQConnection
-  [4627|09:38:33:460378||     ./src/recvmbbase.cpp|0230|  eInfo]获取已存在的MQ连接成功
-  [4627|09:38:33:460743||     ./src/recvmbbase.cpp|0233|  eInfo]leave CRecvMbBase::GetMQConnection[正确退出]
-  [4627|09:38:33:461038||     ./src/recvmbbase.cpp|0192|  eInfo]enter CRecvMbBase::GetDBConnection
-  [4627|09:38:33:552763||     ./src/recvmbbase.cpp|0210|  eInfo]获取已存在的数据库连接成功
-  [4627|09:38:33:553081||     ./src/recvmbbase.cpp|0213|  eInfo]leave CRecvMbBase::GetDBConnection[正确退出]
-  [4627|09:38:33:553376||     ./src/recvmbbase.cpp|0238|  eInfo]enter CRecvMbBase::InitSysParam
-  [4627|09:38:33:553678||     ./src/recvmbbase.cpp|2097|  eInfo]enter CRecvMbBase::GetSysparmValue
-  [4627|09:38:33:554015||     ./src/recvmbbase.cpp|2106|  eInfo]leave CRecvMbBase::GetSysparmValue[正确退出]
-  [4627|09:38:33:554324||  ./src/commonpubfunc.cpp|0915|  eInfo]enter GetIsoDateTime
-  [4627|09:38:33:554617||  ./src/commonpubfunc.cpp|0918|  eInfo]iSysFlag[1]
-  [4627|09:38:33:554908||  ./src/commonpubfunc.cpp|0557|  eInfo]enter GetWorkDate
-  [4627|09:38:33:555196||  ./src/commonpubfunc.cpp|0563|  eInfo]iSysFlag=[1]
-  [4627|09:38:33:556070||  ./src/commonpubfunc.cpp|0571|  eInfo]leave GetWorkDate[正确退出]
-  [4627|09:38:33:556386||  ./src/commonpubfunc.cpp|0888|  eInfo]enter GetIsoTime
-  [4627|09:38:33:556682||  ./src/commonpubfunc.cpp|0899|  eInfo]leave GetIsoTime[正确退出]
-  [4627|09:38:33:556981||  ./src/commonpubfunc.cpp|0929|  eInfo]leave GetIsoDateTime[正确退出]
-  [4627|09:38:33:557279|| ./src/pubfunchandler.cpp|0110|  eInfo]enter GetWorkDateWithException
-  [4627|09:38:33:557572||  ./src/commonpubfunc.cpp|0557|  eInfo]enter GetWorkDate
-  [4627|09:38:33:557867||  ./src/commonpubfunc.cpp|0563|  eInfo]iSysFlag=[1]
-  [4627|09:38:33:558477||  ./src/commonpubfunc.cpp|0571|  eInfo]leave GetWorkDate[正确退出]
-  [4627|09:38:33:558776|| ./src/pubfunchandler.cpp|0120|  eInfo]leave GetWorkDateWithException[正确退出]
-  [4627|09:38:33:559080||     ./src/recvmbbase.cpp|2097|  eInfo]enter CRecvMbBase::GetSysparmValue
-  [4627|09:38:33:559404||     ./src/recvmbbase.cpp|2106|  eInfo]leave CRecvMbBase::GetSysparmValue[正确退出]
-  [4627|09:38:33:559708||     ./src/recvmbbase.cpp|2097|  eInfo]enter CRecvMbBase::GetSysparmValue
-  [4627|09:38:33:560035||     ./src/recvmbbase.cpp|2106|  eInfo]leave CRecvMbBase::GetSysparmValue[正确退出]
-  [4627|09:38:33:560336||     ./src/recvmbbase.cpp|2097|  eInfo]enter CRecvMbBase::GetSysparmValue
-  [4627|09:38:33:560728||     ./src/recvmbbase.cpp|2106|  eInfo]leave CRecvMbBase::GetSysparmValue[正确退出]
-  [4627|09:38:33:561046||     ./src/recvmbbase.cpp|0322|  eInfo]enter CRecvMbBase::GetEsbTime
-  [4627|09:38:33:561345||  ./src/commonpubfunc.cpp|1088|  eInfo]enter IsoDateTime2EsbTime
-  [4627|09:38:33:561659||  ./src/commonpubfunc.cpp|1090|  eInfo]leave IsoDateTime2EsbTime[正确退出]
-  [4627|09:38:33:561961||     ./src/recvmbbase.cpp|0324|  eInfo]leave CRecvMbBase::GetEsbTime[正确退出]
-  [4627|09:38:33:562281||     ./src/recvmbbase.cpp|2097|  eInfo]enter CRecvMbBase::GetSysparmValue
-  [4627|09:38:33:562600||  ./src/commonpubfunc.cpp|0045|  eInfo]enter GetSysParam
-  [4627|09:38:33:568919||  ./src/commonpubfunc.cpp|0064|  eInfo]leave GetSysParam[正确退出]
-  [4627|09:38:33:569232||     ./src/recvmbbase.cpp|2106|  eInfo]leave CRecvMbBase::GetSysparmValue[正确退出]
-  [4627|09:38:33:569536||     ./src/recvmbbase.cpp|0275|  eInfo]leave CRecvMbBase::InitSysParam[正确退出]
-  [4627|09:38:35:822655||  ./src/cnaps2pubfunc.cpp|2578| eError]日终状态不能发送msgtp [hvps.111.001.01]
-  [4627|09:38:35:822959||  ./src/cnaps2pubfunc.cpp|2513|  eInfo]leave CNAPSNS_DB::ChkHvpsSysstat[退出]
-  [4627|09:38:35:823248||     ./src/recvmb0531.cpp|0233|  eInfo]日终状态不能发送msgtp [hvps.111.001.01]
-  [4627|09:38:35:823614|| ./src/pubfunchandler.cpp|0096|  eInfo]enter isBankRightWithException
-  [4627|09:38:35:823884||  ./src/cnaps2pubfunc.cpp|2385|  eInfo]enter CNAPSNS_DB::isBankRight
-  [4627|09:38:35:824448||  ./src/cnaps2pubfunc.cpp|2041|  eInfo]enter CNAPSNS_DB::GetSapBank
-  [4627|09:38:35:824925||  ./src/cnaps2pubfunc.cpp|2052|  eInfo]leave CNAPSNS_DB::GetSapBank[正确退出]
-  [4627|09:38:35:891611||  ./src/cnaps2pubfunc.cpp|2499|  eInfo]leave CNAPSNS_DB::isBankRight[正确退出]
-  [4627|09:38:35:891897|| ./src/pubfunchandler.cpp|0104|  eInfo]leave isBankRightWithException[正确退出]
-  [4627|09:38:35:892174|| ./src/pubfunchandler.cpp|0110|  eInfo]enter GetWorkDateWithException
-  [4627|09:38:35:892446||  ./src/commonpubfunc.cpp|0557|  eInfo]enter GetWorkDate
-  [4627|09:38:35:892714||  ./src/commonpubfunc.cpp|0563|  eInfo]iSysFlag=[0]
-  [4627|09:38:35:893312||  ./src/commonpubfunc.cpp|0571|  eInfo]leave GetWorkDate[正确退出]
-  [4627|09:38:35:893596|| ./src/pubfunchandler.cpp|0120|  eInfo]leave GetWorkDateWithException[正确退出]
-  [4627|09:38:35:893878|| ./src/pubfunchandler.cpp|0134|  eInfo]enter GetMsgIdValueWithException
-  [4627|09:38:35:894160||  ./src/commonpubfunc.cpp|0608|  eInfo]enter GetMsgIdValue
-  [4627|09:38:35:894430||  ./src/commonpubfunc.cpp|0609|  eInfo]iCodeType:[62],iSysFlag:[0],sSendBankCode:[]
-  [4627|09:38:35:895009||  ./src/commonpubfunc.cpp|0673| eError]取流水号成功:[2071172]!
-  [4627|09:38:35:895401||  ./src/commonpubfunc.cpp|0687| eError]从数据库获取自然日期[20161101]
-  [4627|09:38:35:895676||  ./src/commonpubfunc.cpp|0045|  eInfo]enter GetSysParam
-  [4627|09:38:35:896128||  ./src/commonpubfunc.cpp|0064|  eInfo]leave GetSysParam[正确退出]
-  [4627|09:38:35:896402||  ./src/commonpubfunc.cpp|0747| eDebug]sRtnValue=[10001220161101000002071172]
-  [4627|09:38:35:921673||  ./src/commonpubfunc.cpp|0748|  eInfo]leave GetMsgIdValue[正确退出]
-  [4627|09:38:35:921964|| ./src/pubfunchandler.cpp|0143|  eInfo]leave GetMsgIdValueWithException[正确退出]
-  [4627|09:38:35:922245||  ./src/cnaps2pubfunc.cpp|3723|  eInfo]enter CNAPSNS_DB::GetBankCode
-  [4627|09:38:36:281403||  ./src/cnaps2pubfunc.cpp|3749| eDebug]网点[00001]所属行号[402602000018]
-  [4627|09:38:36:281711||  ./src/cnaps2pubfunc.cpp|3751|  eInfo]leave CNAPSNS_DB::GetBankCode[正确退出]
-  [4627|09:38:36:282055||  ./src/cnaps2pubfunc.cpp|3723|  eInfo]enter CNAPSNS_DB::GetBankCode
-  [4627|09:38:36:283621||  ./src/cnaps2pubfunc.cpp|3749| eDebug]网点[00001]所属行号[402602000018]
-  [4627|09:38:36:283910||  ./src/cnaps2pubfunc.cpp|3751|  eInfo]leave CNAPSNS_DB::GetBankCode[正确退出]
-  [4627|09:38:36:292514||  ./src/cnaps2pubfunc.cpp|3521|  eInfo]enter CNAPSNS_DB::GetOrgnTypeFromOrgnCode
-  [4627|09:38:36:292859||  ./src/cnaps2pubfunc.cpp|3485|  eInfo]enter CNAPSNS_DB::GetSysNetOrgnTp
-  [4627|09:38:36:293166||  ./src/cnaps2pubfunc.cpp|3488|  eInfo]whereSql=[NETCODE='00001']
-  [4627|09:38:36:300576||  ./src/cnaps2pubfunc.cpp|3485|  eInfo]leave CNAPSNS_DB::GetSysNetOrgnTp[退出]
-  [4627|09:38:36:300868||  ./src/cnaps2pubfunc.cpp|3525|  eInfo]leave CNAPSNS_DB::GetOrgnTypeFromOrgnCode[正确退出]
-  [4627|09:38:36:354114||     ./src/recvmb0531.cpp|0298|  eInfo]交易机构[00001],付款行[402602000018]主机标识[00]
-  [4627|09:38:36:355052||  ./src/cnaps2pubfunc.cpp|4278|  eInfo]enter CNAPSNS_DB::ChkGrtRule
-  [4627|09:38:36:394625||  ./src/cnaps2pubfunc.cpp|4293|  eInfo]获取复核金额参数代码 = [ msgtype = 'hvps.111.001.01' and rsflag = '1']
-  [4627|09:38:36:552169||  ./src/cnaps2pubfunc.cpp|4346|  eInfo]复核金额系统参数代码 = [54A1]
-  [4627|09:38:36:552453||  ./src/commonpubfunc.cpp|0045|  eInfo]enter GetSysParam
-  [4627|09:38:36:571885||  ./src/commonpubfunc.cpp|0064|  eInfo]leave GetSysParam[正确退出]
-  [4627|09:38:36:572174||  ./src/commonpubfunc.cpp|0045|  eInfo]enter GetSysParam
-  [4627|09:38:36:572817||  ./src/commonpubfunc.cpp|0064|  eInfo]leave GetSysParam[正确退出]
-  [4627|09:38:36:573099||  ./src/cnaps2pubfunc.cpp|4444|  eInfo]复核金额 = [600000.00], 交易金额 = [1.00]
-  [4627|09:38:36:573362||  ./src/cnaps2pubfunc.cpp|4449|  eInfo]操作标识=[0]  0-待发送 1-待复核 2-待授权
-  [4627|09:38:37:540438||  ./src/cnaps2pubfunc.cpp|1187|  eInfo]enter CNAPSNS_NODB::TrimAcctNo
-  [4627|09:38:37:540732||  ./src/cnaps2pubfunc.cpp|1254| eDebug]匹配结束，没有找到需要过滤的字符串
-  [4627|09:38:37:541008||  ./src/cnaps2pubfunc.cpp|1187|  eInfo]leave CNAPSNS_NODB::TrimAcctNo[退出]
-  [4627|09:38:37:541292||  ./src/cnaps2pubfunc.cpp|1187|  eInfo]enter CNAPSNS_NODB::TrimAcctNo
-  [4627|09:38:37:541588||  ./src/cnaps2pubfunc.cpp|1254| eDebug]匹配结束，没有找到需要过滤的字符串
-  [4627|09:38:37:541855||  ./src/cnaps2pubfunc.cpp|1187|  eInfo]leave CNAPSNS_NODB::TrimAcctNo[退出]
   [4627|09:38:37:542483||       ./src/mbcharge.cpp|1002|  eInfo]enter CMbCharge::requestEsbService
   [4627|09:38:37:568181||       ./src/mbcharge.cpp|1005|  eInfo]cEsbMsgIn.m_sXml = [8826][<?xml version="1.0" encoding="UTF-8"?>
   <service>
@@ -190,7 +49,7 @@ tramp标示文件的语法为: =/[protocol]:[user@]hostname[#port]:path-to-file=
           <data name="CONSUMER_ID" >
             <field type="string" length="6" scale="0" >100012</field>
           </data>
-          ....又是很长一段XML
+          ....很长一段XML
               <data name="PAYEE_ACCT_NO" >
                 <field type="string" length="1" scale="0" >1</field>
               </data>
@@ -206,123 +65,17 @@ tramp标示文件的语法为: =/[protocol]:[user@]hostname[#port]:path-to-file=
       </data>
     </body>
   </service>]
-  [4627|09:38:37:568512||       ./src/mbcharge.cpp|1137|  eInfo]enter CMbCharge::getMQMsgId
-  [4627|09:38:37:569166||       ./src/mbcharge.cpp|1142|  eInfo]get Real MQMsgId = [100012201611010002071172]
-  [4627|09:38:37:569446||       ./src/mbcharge.cpp|1143|  eInfo]leave CMbCharge::getMQMsgId[正确退出]
   [4627|09:38:37:569725||       ./src/mbcharge.cpp|1013|  eInfo]设置MQ同步msgid= [100012201611010002071172]
   [4627|09:38:37:570005||       ./src/mbcharge.cpp|0053|  eInfo]enter CMbCharge::GetMQConnection
   [4627|09:38:37:570799||       ./src/mbcharge.cpp|0066|  eInfo]获取已存在的MQ连接成功
   [4627|09:38:37:571091||       ./src/mbcharge.cpp|0069|  eInfo]leave CMbCharge::GetMQConnection[正确退出]
   [4627|09:38:37:612243||       ./src/mbcharge.cpp|1031|  eInfo]已发送报文
-  [4627|09:38:38:112318||       ./src/mbcharge.cpp|1038|  eInfo]收到回应报文 cEsbMsgOut = [<?xml version="1.0" encoding="UTF-8"?>
-  <service>
-  <sys-header>
-  <data name="SYS_HEAD">
-  <struct>
-  <data name="RET_STATUS">
-  <field type="string" length="1" scale="0" pin="false">F</field>
-  </data>
-  <data name="RET">
-  <array>
-  <struct>
-  <data name="RET_MSG">
-  <field type="string" length="512" scale="0" pin="false">与AS400系统通讯发生异常,请联系系统管理员</field>
-  </data>
-  <data name="RET_CODE">
-  <field type="string" length="30" scale="0" pin="false">1000010000ESR0003</field>
-  </data>
-  </struct>
-  </array>
-  </data>
-  <data name="TRAN_TIMESTAMP">
-  <field type="string" length="9" scale="0" pin="false">010201</field>
-  </data>
-  <data name="TRAN_DATE">
-  <field type="string" length="8" scale="0" pin="false">20110101</field>
-  </data>
-  <data name="SERVICE_SCENE">
-  <field type="string" length="2" scale="0" pin="false">01</field>
-  </data>
-  <data name="CONSUMER_ID">
-  <field type="string" length="6" scale="0" pin="false">100012</field>
-  </data>
-  <data name="SERVICE_CODE">
-  <field type="string" length="11" scale="0" pin="false">03001000002</field>
-  </data>
-  <data name="CONSUMER_SEQ_NO">
-  <field type="string" length="26" scale="0" pin="false">10001220161101000002071172</field>
-  </data>
-  <data name="ESB_SEQ_NO">
-  <field type="string" length="26" scale="0" pin="false">80080020161101020943538944</field>
-  </data>
-  </struct>
-  </data>
-  </sys-header>
-  <app-header>
-  <data name="APP_HEAD">
-  <struct>
-  </struct>
-  </data>
-  </app-header>
-  <local-header>
-  <data name="LOCAL_HEAD">
-  <struct>
-  </struct>
-  </data>
-  </local-header>
-  <body>
-  </body>
-  </service>
-  ]
-  [4627|09:38:38:116058||       ./src/mbcharge.cpp|1049|  eInfo]从回应队列[MBSND_ESBRETN]获取AS400回应报文成功
-  [4627|09:38:38:124612||       ./src/mbcharge.cpp|1062|  eInfo]leave CMbCharge::requestEsbService[正确退出]
   [4627|09:38:38:125382||       ./src/mbcharge.cpp|1074|  eInfo]cEsbMsgOut.m_sDwRET_STATUS = [F],cEsbMsgOut.m_sDwRET_CODE = [ESR0003]
   [4627|09:38:38:126245||     ./src/recvmb0531.cpp|1207| eError]CRecvMb0531::ChargeMb--toMb0551记账超时, [2][交易超时[ESR0003][与AS400系统通讯发生异常,请联系系统管理员]!]
   [4627|09:38:38:126521||     ./src/recvmb0531.cpp|1219|  eInfo]m_oEsbMsg0551o.m_sDwSERV_SEQ_NO []
   [4627|09:38:38:126943||     ./src/recvmb0531.cpp|1222|  eInfo]leave CRecvMb0531::ChargeMb[正确退出]
   [4627|09:38:38:127216||     ./src/recvmb0531.cpp|1290|  eInfo]enter CRecvMb0531::UpdateDb
   [4627|09:38:38:127532|| ./src/pubfunchandler.cpp|0518|  eInfo]enter dbexecsqlwithexception
-  [4627|09:38:38:127822||     ./src/recvmb0531.cpp|1308|  eInfo]操作的SQL语句: [update accountlist t set t.accountstate = '02', t.accountdate = '20110101', t.accountsn = '' where t.esbtranno = '10001220161101000002071172' ]
-  [4627|09:38:38:192089|| ./src/pubfunchandler.cpp|0546|  eInfo]leave dbexecsqlwithexception[正确退出]
-  [4627|09:38:38:192414|| ./src/pubfunchandler.cpp|0518|  eInfo]enter dbexecsqlwithexception
-  [4627|09:38:38:192696||     ./src/recvmb0531.cpp|1348|  eInfo]操作的SQL语句: [update mbcredit t set t.accountstate = '02', t.procstate = '72'  where t.esbbussino = '15201611010096300002' ]
-  [4627|09:38:38:195730|| ./src/pubfunchandler.cpp|0546|  eInfo]leave dbexecsqlwithexception[正确退出]
-  [4627|09:38:38:196936||  ./src/commonpubfunc.cpp|0372|  eInfo]enter OperLog
-  [4627|09:38:38:197629||  ./src/commonpubfunc.cpp|0422|  eInfo]leave OperLog[正确退出]
-  [4627|09:38:38:197933||     ./src/recvmb0531.cpp|1385|  eInfo]leave CRecvMb0531::UpdateDb[正确退出]
-  [4627|09:38:38:198582||     ./src/recvmb0531.cpp|1418|  eInfo]enter CRecvMb0531::SendRetMsg
-  [4627|09:38:38:199322||     ./src/recvmb0531.cpp|0346|  eInfo]enter CRecvMb0531::SetErrACK
-  [4627|09:38:38:204298||  ./src/commonpubfunc.cpp|1151|  eInfo]enter PutMsgToMQ
-  [4627|09:38:38:204619||  ./src/commonpubfunc.cpp|1152| eDebug]parms[sMsg=<?xml version="1.0" encoding="UTF-8"?>
-  <service>
-    <sys-header>
-      <data name="SYS_HEAD" >
-        <struct>
-          <data name="SERVICE_CODE" >
-            <field type="string" length="11" scale="0" >03001000001</field>
-          </data>
-          <data name="SERVICE_SCENE" >
-            <field type="string" length="2" scale="0" >15</field>
-          </data>
-          <data name="SERVICE_VERSION" >
-            <field type="string" length="2" scale="0" >00</field>
-          </data>
-          ...还是很长的XML
-          <data name="BUSS_DEAL_STATUS" >
-            <field type="string" length="1" scale="0" >a</field>
-          </data>
-          <data name="REMARK" >
-            <field length="-1" scale="-1" />
-          </data>
-        </struct>
-      </data>
-    </body>
-  </service>,sQueTag=MBRCV_ESBRETN,sQMsgId=00001477964312000267]
-  [4627|09:38:38:204935||  ./src/commonpubfunc.cpp|1160|  eInfo]length=[3107]  szQueName= [MBRCV_ESBRETN]
-  [4627|09:38:38:205238||  ./src/commonpubfunc.cpp|1165|  eInfo]设置同步msgid[00001477964312000267]
-  [4627|09:38:38:206510||  ./src/commonpubfunc.cpp|1177|  eInfo]leave PutMsgToMQ[正确退出]
-  [4627|09:38:38:206795||     ./src/recvmb0531.cpp|0384|  eInfo]leave CRecvMb0531::SetErrACK[正确退出]
-  [4627|09:38:38:207196||     ./src/recvmb0531.cpp|1535|  eInfo]leave CRecvMb0531::SendRetMsg[正确退出]
   [4627|09:38:38:207476||     ./src/recvmb0531.cpp|0083|  eInfo]leave CRecvMb0531::doWorkSelf[正确退出]
   [4627|09:38:38:223483||     ./src/recvmbbase.cpp|0185|  eInfo]leave CRecvMbBase::doWork[正确退出]
   [4627|09:38:38:362975||     ./src/recvmbbase.cpp|0099|  eInfo]enter CRecvMbBase::~CRecvMbBase
@@ -339,138 +92,19 @@ tramp标示文件的语法为: =/[protocol]:[user@]hostname[#port]:path-to-file=
      [4627|09:38:32:557462||         ./src/logger.cpp|0298|  eInfo]=========================================================================
      [4627|09:38:32:576258||     ./src/recvmbwork.cpp|0085|  eInfo]enter CRecvMbWork::doWork
      [4627|09:38:32:576560||     ./src/recvmbwork.cpp|0088| eDebug]Init CNAPS2DB cnaps2 1a119bb03ab93a12
-     [4627|09:38:32:576851||     ./src/recvmbwork.cpp|0117|  eInfo]szBizCode = [0531]
-     [4627|09:38:32:604968||     ./src/recvmbwork.cpp|0414|  eInfo]enter CRecvMbWork::GetPtTrcd
-     [4627|09:38:32:967495||     ./src/recvmbwork.cpp|0414|  eInfo]leave CRecvMbWork::GetPtTrcd[退出]
-     [4627|09:38:32:967821||     ./src/recvmbwork.cpp|0655|  eInfo]属于大小额业务！
-     [4627|09:38:33:327498||     ./src/recvmbbase.cpp|0107|  eInfo]enter CRecvMbBase::doWork
-     [4627|09:38:33:328095||     ./src/npspubfunc.cpp|1510|  eInfo]enter NPSNS::SensitiveMsgPro
-     [4627|09:38:33:330611||     ./src/npspubfunc.cpp|1715|  eInfo]leave NPSNS::SensitiveMsgPro[正确退出]
-     [4627|09:38:33:381312||     ./src/recvmbbase.cpp|0116| eDebug]i get a msg[<?xml version="1.0" encoding="UTF-8"?>
-     [4627|09:38:33:390837||     ./src/recvmbbase.cpp|0218|  eInfo]enter CRecvMbBase::GetMQConnection
-     [4627|09:38:33:460378||     ./src/recvmbbase.cpp|0230|  eInfo]获取已存在的MQ连接成功
-     [4627|09:38:33:460743||     ./src/recvmbbase.cpp|0233|  eInfo]leave CRecvMbBase::GetMQConnection[正确退出]
-     [4627|09:38:33:461038||     ./src/recvmbbase.cpp|0192|  eInfo]enter CRecvMbBase::GetDBConnection
-     [4627|09:38:33:552763||     ./src/recvmbbase.cpp|0210|  eInfo]获取已存在的数据库连接成功
-     [4627|09:38:33:553081||     ./src/recvmbbase.cpp|0213|  eInfo]leave CRecvMbBase::GetDBConnection[正确退出]
-     [4627|09:38:33:553376||     ./src/recvmbbase.cpp|0238|  eInfo]enter CRecvMbBase::InitSysParam
-     [4627|09:38:33:553678||     ./src/recvmbbase.cpp|2097|  eInfo]enter CRecvMbBase::GetSysparmValue
-     [4627|09:38:33:554015||     ./src/recvmbbase.cpp|2106|  eInfo]leave CRecvMbBase::GetSysparmValue[正确退出]
-     [4627|09:38:33:554324||  ./src/commonpubfunc.cpp|0915|  eInfo]enter GetIsoDateTime
-     [4627|09:38:33:554617||  ./src/commonpubfunc.cpp|0918|  eInfo]iSysFlag[1]
-     [4627|09:38:33:554908||  ./src/commonpubfunc.cpp|0557|  eInfo]enter GetWorkDate
-     [4627|09:38:33:555196||  ./src/commonpubfunc.cpp|0563|  eInfo]iSysFlag=[1]
-     [4627|09:38:33:556070||  ./src/commonpubfunc.cpp|0571|  eInfo]leave GetWorkDate[正确退出]
-     [4627|09:38:33:556386||  ./src/commonpubfunc.cpp|0888|  eInfo]enter GetIsoTime
-     [4627|09:38:33:556682||  ./src/commonpubfunc.cpp|0899|  eInfo]leave GetIsoTime[正确退出]
-     [4627|09:38:33:556981||  ./src/commonpubfunc.cpp|0929|  eInfo]leave GetIsoDateTime[正确退出]
-     [4627|09:38:33:557279|| ./src/pubfunchandler.cpp|0110|  eInfo]enter GetWorkDateWithException
-     [4627|09:38:33:557572||  ./src/commonpubfunc.cpp|0557|  eInfo]enter GetWorkDate
-     [4627|09:38:33:557867||  ./src/commonpubfunc.cpp|0563|  eInfo]iSysFlag=[1]
-     [4627|09:38:33:558477||  ./src/commonpubfunc.cpp|0571|  eInfo]leave GetWorkDate[正确退出]
-     [4627|09:38:33:558776|| ./src/pubfunchandler.cpp|0120|  eInfo]leave GetWorkDateWithException[正确退出]
-     [4627|09:38:33:559080||     ./src/recvmbbase.cpp|2097|  eInfo]enter CRecvMbBase::GetSysparmValue
-     [4627|09:38:33:559404||     ./src/recvmbbase.cpp|2106|  eInfo]leave CRecvMbBase::GetSysparmValue[正确退出]
-     [4627|09:38:33:559708||     ./src/recvmbbase.cpp|2097|  eInfo]enter CRecvMbBase::GetSysparmValue
-     [4627|09:38:33:560035||     ./src/recvmbbase.cpp|2106|  eInfo]leave CRecvMbBase::GetSysparmValue[正确退出]
-     [4627|09:38:33:560336||     ./src/recvmbbase.cpp|2097|  eInfo]enter CRecvMbBase::GetSysparmValue
-     [4627|09:38:33:560728||     ./src/recvmbbase.cpp|2106|  eInfo]leave CRecvMbBase::GetSysparmValue[正确退出]
-     [4627|09:38:33:561046||     ./src/recvmbbase.cpp|0322|  eInfo]enter CRecvMbBase::GetEsbTime
-     [4627|09:38:33:561345||  ./src/commonpubfunc.cpp|1088|  eInfo]enter IsoDateTime2EsbTime
-     [4627|09:38:33:561659||  ./src/commonpubfunc.cpp|1090|  eInfo]leave IsoDateTime2EsbTime[正确退出]
-     [4627|09:38:33:561961||     ./src/recvmbbase.cpp|0324|  eInfo]leave CRecvMbBase::GetEsbTime[正确退出]
-     [4627|09:38:33:562281||     ./src/recvmbbase.cpp|2097|  eInfo]enter CRecvMbBase::GetSysparmValue
-     [4627|09:38:33:562600||  ./src/commonpubfunc.cpp|0045|  eInfo]enter GetSysParam
-     [4627|09:38:33:568919||  ./src/commonpubfunc.cpp|0064|  eInfo]leave GetSysParam[正确退出]
-     [4627|09:38:33:569232||     ./src/recvmbbase.cpp|2106|  eInfo]leave CRecvMbBase::GetSysparmValue[正确退出]
-     [4627|09:38:33:569536||     ./src/recvmbbase.cpp|0275|  eInfo]leave CRecvMbBase::InitSysParam[正确退出]
-     [4627|09:38:35:822655||  ./src/cnaps2pubfunc.cpp|2578| eError]日终状态不能发送msgtp [hvps.111.001.01]
-     [4627|09:38:35:822959||  ./src/cnaps2pubfunc.cpp|2513|  eInfo]leave CNAPSNS_DB::ChkHvpsSysstat[退出]
-     [4627|09:38:35:823248||     ./src/recvmb0531.cpp|0233|  eInfo]日终状态不能发送msgtp [hvps.111.001.01]
-     [4627|09:38:35:823614|| ./src/pubfunchandler.cpp|0096|  eInfo]enter isBankRightWithException
-     [4627|09:38:35:823884||  ./src/cnaps2pubfunc.cpp|2385|  eInfo]enter CNAPSNS_DB::isBankRight
-     [4627|09:38:35:824448||  ./src/cnaps2pubfunc.cpp|2041|  eInfo]enter CNAPSNS_DB::GetSapBank
-     [4627|09:38:35:824925||  ./src/cnaps2pubfunc.cpp|2052|  eInfo]leave CNAPSNS_DB::GetSapBank[正确退出]
-     [4627|09:38:35:891611||  ./src/cnaps2pubfunc.cpp|2499|  eInfo]leave CNAPSNS_DB::isBankRight[正确退出]
-     [4627|09:38:35:891897|| ./src/pubfunchandler.cpp|0104|  eInfo]leave isBankRightWithException[正确退出]
-     [4627|09:38:35:892174|| ./src/pubfunchandler.cpp|0110|  eInfo]enter GetWorkDateWithException
-     [4627|09:38:35:892446||  ./src/commonpubfunc.cpp|0557|  eInfo]enter GetWorkDate
-     [4627|09:38:35:892714||  ./src/commonpubfunc.cpp|0563|  eInfo]iSysFlag=[0]
-     [4627|09:38:35:893312||  ./src/commonpubfunc.cpp|0571|  eInfo]leave GetWorkDate[正确退出]
-     [4627|09:38:35:893596|| ./src/pubfunchandler.cpp|0120|  eInfo]leave GetWorkDateWithException[正确退出]
-     [4627|09:38:35:893878|| ./src/pubfunchandler.cpp|0134|  eInfo]enter GetMsgIdValueWithException
-     [4627|09:38:35:894160||  ./src/commonpubfunc.cpp|0608|  eInfo]enter GetMsgIdValue
-     [4627|09:38:35:894430||  ./src/commonpubfunc.cpp|0609|  eInfo]iCodeType:[62],iSysFlag:[0],sSendBankCode:[]
-     [4627|09:38:35:895009||  ./src/commonpubfunc.cpp|0673| eError]取流水号成功:[2071172]!
-     [4627|09:38:35:895401||  ./src/commonpubfunc.cpp|0687| eError]从数据库获取自然日期[20161101]
-     [4627|09:38:35:895676||  ./src/commonpubfunc.cpp|0045|  eInfo]enter GetSysParam
-     [4627|09:38:35:896128||  ./src/commonpubfunc.cpp|0064|  eInfo]leave GetSysParam[正确退出]
-     [4627|09:38:35:896402||  ./src/commonpubfunc.cpp|0747| eDebug]sRtnValue=[10001220161101000002071172]
-     [4627|09:38:35:921673||  ./src/commonpubfunc.cpp|0748|  eInfo]leave GetMsgIdValue[正确退出]
-     [4627|09:38:35:921964|| ./src/pubfunchandler.cpp|0143|  eInfo]leave GetMsgIdValueWithException[正确退出]
-     [4627|09:38:35:922245||  ./src/cnaps2pubfunc.cpp|3723|  eInfo]enter CNAPSNS_DB::GetBankCode
-     [4627|09:38:36:281403||  ./src/cnaps2pubfunc.cpp|3749| eDebug]网点[00001]所属行号[402602000018]
-     [4627|09:38:36:281711||  ./src/cnaps2pubfunc.cpp|3751|  eInfo]leave CNAPSNS_DB::GetBankCode[正确退出]
-     [4627|09:38:36:282055||  ./src/cnaps2pubfunc.cpp|3723|  eInfo]enter CNAPSNS_DB::GetBankCode
-     [4627|09:38:36:283621||  ./src/cnaps2pubfunc.cpp|3749| eDebug]网点[00001]所属行号[402602000018]
-     [4627|09:38:36:283910||  ./src/cnaps2pubfunc.cpp|3751|  eInfo]leave CNAPSNS_DB::GetBankCode[正确退出]
-     [4627|09:38:36:292514||  ./src/cnaps2pubfunc.cpp|3521|  eInfo]enter CNAPSNS_DB::GetOrgnTypeFromOrgnCode
-     [4627|09:38:36:292859||  ./src/cnaps2pubfunc.cpp|3485|  eInfo]enter CNAPSNS_DB::GetSysNetOrgnTp
-     [4627|09:38:36:293166||  ./src/cnaps2pubfunc.cpp|3488|  eInfo]whereSql=[NETCODE='00001']
-     [4627|09:38:36:300576||  ./src/cnaps2pubfunc.cpp|3485|  eInfo]leave CNAPSNS_DB::GetSysNetOrgnTp[退出]
-     [4627|09:38:36:300868||  ./src/cnaps2pubfunc.cpp|3525|  eInfo]leave CNAPSNS_DB::GetOrgnTypeFromOrgnCode[正确退出]
-     [4627|09:38:36:354114||     ./src/recvmb0531.cpp|0298|  eInfo]交易机构[00001],付款行[402602000018]主机标识[00]
-     [4627|09:38:36:355052||  ./src/cnaps2pubfunc.cpp|4278|  eInfo]enter CNAPSNS_DB::ChkGrtRule
-     [4627|09:38:36:394625||  ./src/cnaps2pubfunc.cpp|4293|  eInfo]获取复核金额参数代码 = [ msgtype = 'hvps.111.001.01' and rsflag = '1']
-     [4627|09:38:36:552169||  ./src/cnaps2pubfunc.cpp|4346|  eInfo]复核金额系统参数代码 = [54A1]
-     [4627|09:38:36:552453||  ./src/commonpubfunc.cpp|0045|  eInfo]enter GetSysParam
-     [4627|09:38:36:571885||  ./src/commonpubfunc.cpp|0064|  eInfo]leave GetSysParam[正确退出]
-     [4627|09:38:36:572174||  ./src/commonpubfunc.cpp|0045|  eInfo]enter GetSysParam
-     [4627|09:38:36:572817||  ./src/commonpubfunc.cpp|0064|  eInfo]leave GetSysParam[正确退出]
-     [4627|09:38:36:573099||  ./src/cnaps2pubfunc.cpp|4444|  eInfo]复核金额 = [600000.00], 交易金额 = [1.00]
-     [4627|09:38:36:573362||  ./src/cnaps2pubfunc.cpp|4449|  eInfo]操作标识=[0]  0-待发送 1-待复核 2-待授权
-     [4627|09:38:37:540438||  ./src/cnaps2pubfunc.cpp|1187|  eInfo]enter CNAPSNS_NODB::TrimAcctNo
-     [4627|09:38:37:540732||  ./src/cnaps2pubfunc.cpp|1254| eDebug]匹配结束，没有找到需要过滤的字符串
-     [4627|09:38:37:541008||  ./src/cnaps2pubfunc.cpp|1187|  eInfo]leave CNAPSNS_NODB::TrimAcctNo[退出]
-     [4627|09:38:37:541292||  ./src/cnaps2pubfunc.cpp|1187|  eInfo]enter CNAPSNS_NODB::TrimAcctNo
-     [4627|09:38:37:541588||  ./src/cnaps2pubfunc.cpp|1254| eDebug]匹配结束，没有找到需要过滤的字符串
-     [4627|09:38:37:541855||  ./src/cnaps2pubfunc.cpp|1187|  eInfo]leave CNAPSNS_NODB::TrimAcctNo[退出]
      [4627|09:38:37:542483||       ./src/mbcharge.cpp|1002|  eInfo]enter CMbCharge::requestEsbService
      [4627|09:38:37:568181||       ./src/mbcharge.cpp|1005|  eInfo]cEsbMsgIn.m_sXml = [8826][<?xml version="1.0" encoding="UTF-8"?>
-     [4627|09:38:37:568512||       ./src/mbcharge.cpp|1137|  eInfo]enter CMbCharge::getMQMsgId
-     [4627|09:38:37:569166||       ./src/mbcharge.cpp|1142|  eInfo]get Real MQMsgId = [100012201611010002071172]
-     [4627|09:38:37:569446||       ./src/mbcharge.cpp|1143|  eInfo]leave CMbCharge::getMQMsgId[正确退出]
      [4627|09:38:37:569725||       ./src/mbcharge.cpp|1013|  eInfo]设置MQ同步msgid= [100012201611010002071172]
      [4627|09:38:37:570005||       ./src/mbcharge.cpp|0053|  eInfo]enter CMbCharge::GetMQConnection
      [4627|09:38:37:570799||       ./src/mbcharge.cpp|0066|  eInfo]获取已存在的MQ连接成功
      [4627|09:38:37:571091||       ./src/mbcharge.cpp|0069|  eInfo]leave CMbCharge::GetMQConnection[正确退出]
      [4627|09:38:37:612243||       ./src/mbcharge.cpp|1031|  eInfo]已发送报文
-     [4627|09:38:38:112318||       ./src/mbcharge.cpp|1038|  eInfo]收到回应报文 cEsbMsgOut = [<?xml version="1.0" encoding="UTF-8"?>
-     [4627|09:38:38:116058||       ./src/mbcharge.cpp|1049|  eInfo]从回应队列[MBSND_ESBRETN]获取AS400回应报文成功
-     [4627|09:38:38:124612||       ./src/mbcharge.cpp|1062|  eInfo]leave CMbCharge::requestEsbService[正确退出]
      [4627|09:38:38:125382||       ./src/mbcharge.cpp|1074|  eInfo]cEsbMsgOut.m_sDwRET_STATUS = [F],cEsbMsgOut.m_sDwRET_CODE = [ESR0003]
      [4627|09:38:38:126245||     ./src/recvmb0531.cpp|1207| eError]CRecvMb0531::ChargeMb--toMb0551记账超时, [2][交易超时[ESR0003][与AS400系统通讯发生异常,请联系系统管理员]!]
      [4627|09:38:38:126521||     ./src/recvmb0531.cpp|1219|  eInfo]m_oEsbMsg0551o.m_sDwSERV_SEQ_NO []
      [4627|09:38:38:126943||     ./src/recvmb0531.cpp|1222|  eInfo]leave CRecvMb0531::ChargeMb[正确退出]
      [4627|09:38:38:127216||     ./src/recvmb0531.cpp|1290|  eInfo]enter CRecvMb0531::UpdateDb
      [4627|09:38:38:127532|| ./src/pubfunchandler.cpp|0518|  eInfo]enter dbexecsqlwithexception
-     [4627|09:38:38:127822||     ./src/recvmb0531.cpp|1308|  eInfo]操作的SQL语句: [update accountlist t set t.accountstate = '02', t.accountdate = '20110101', t.accountsn = '' where t.esbtranno = '10001220161101000002071172' ]
-     [4627|09:38:38:192089|| ./src/pubfunchandler.cpp|0546|  eInfo]leave dbexecsqlwithexception[正确退出]
-     [4627|09:38:38:192414|| ./src/pubfunchandler.cpp|0518|  eInfo]enter dbexecsqlwithexception
-     [4627|09:38:38:192696||     ./src/recvmb0531.cpp|1348|  eInfo]操作的SQL语句: [update mbcredit t set t.accountstate = '02', t.procstate = '72'  where t.esbbussino = '15201611010096300002' ]
-     [4627|09:38:38:195730|| ./src/pubfunchandler.cpp|0546|  eInfo]leave dbexecsqlwithexception[正确退出]
-     [4627|09:38:38:196936||  ./src/commonpubfunc.cpp|0372|  eInfo]enter OperLog
-     [4627|09:38:38:197629||  ./src/commonpubfunc.cpp|0422|  eInfo]leave OperLog[正确退出]
-     [4627|09:38:38:197933||     ./src/recvmb0531.cpp|1385|  eInfo]leave CRecvMb0531::UpdateDb[正确退出]
-     [4627|09:38:38:198582||     ./src/recvmb0531.cpp|1418|  eInfo]enter CRecvMb0531::SendRetMsg
-     [4627|09:38:38:199322||     ./src/recvmb0531.cpp|0346|  eInfo]enter CRecvMb0531::SetErrACK
-     [4627|09:38:38:204298||  ./src/commonpubfunc.cpp|1151|  eInfo]enter PutMsgToMQ
-     [4627|09:38:38:204619||  ./src/commonpubfunc.cpp|1152| eDebug]parms[sMsg=<?xml version="1.0" encoding="UTF-8"?>
-     [4627|09:38:38:204935||  ./src/commonpubfunc.cpp|1160|  eInfo]length=[3107]  szQueName= [MBRCV_ESBRETN]
-     [4627|09:38:38:205238||  ./src/commonpubfunc.cpp|1165|  eInfo]设置同步msgid[00001477964312000267]
-     [4627|09:38:38:206510||  ./src/commonpubfunc.cpp|1177|  eInfo]leave PutMsgToMQ[正确退出]
-     [4627|09:38:38:206795||     ./src/recvmb0531.cpp|0384|  eInfo]leave CRecvMb0531::SetErrACK[正确退出]
-     [4627|09:38:38:207196||     ./src/recvmb0531.cpp|1535|  eInfo]leave CRecvMb0531::SendRetMsg[正确退出]
      [4627|09:38:38:207476||     ./src/recvmb0531.cpp|0083|  eInfo]leave CRecvMb0531::doWorkSelf[正确退出]
      [4627|09:38:38:223483||     ./src/recvmbbase.cpp|0185|  eInfo]leave CRecvMbBase::doWork[正确退出]
      [4627|09:38:38:362975||     ./src/recvmbbase.cpp|0099|  eInfo]enter CRecvMbBase::~CRecvMbBase
