--- a/tougao/如何编写EmacsScript.org
+++ b/tougao/如何编写EmacsScript.org
@@ -6,7 +6,7 @@
 
 Emacs作为一款文本编辑器已经为大家所熟知,但是可能比较少人会想到它还能用来像python,ruby一样作为一门脚本语言来用.
 
-注意: EmacsScript的坑超级多,强烈推荐阅读这篇文章:[[http://www.lunaryorn.com/posts/emacs-script-pitfalls.html][emacs-script-pitfalls]] (这里是它的中文版[[https://github.com/lujun9972/emacs-document/blob/master/elisp-common/emacs-script%25E4%25B8%25AD%25E7%259A%2584%25E9%2582%25A3%25E4%25BA%259B%25E5%259D%2591.org][emacs-script中的那些坑]])
+注意: EmacsScript的坑超级多,强烈推荐阅读这篇文章:[[http://www.lunaryorn.com/posts/emacs-script-pitfalls.html][emacs-script-pitfalls]] (这里是它的中文版[[https://github.com/lujun9972/emacs-document/blob/master/elisp-common/emacs-script%E4%B8%AD%E7%9A%84%E9%82%A3%E4%BA%9B%E5%9D%91.org][emacs-script中的那些坑]])
 
 * --script选项
 
