--- a/articles/2016-10-31Emacs的书签功能介绍.org
+++ b/articles/2016-10-31Emacs的书签功能介绍.org
@@ -5,6 +5,7 @@
 #+LANGUAGE: zh
 #+LATEX_HEADER: \usepackage{xeCJK}
 #+LATEX_HEADER: \setCJKmainfont{Microsoft YaHei}
+#+OPTIONS: toc:nil
 
 #+SETUPFILE: ~/github/org-html-themes/setup/theme-readtheorg.setup
 
