--- a/README.org
+++ b/README.org
@@ -44,3 +44,4 @@
    + [[./articles/2016-12-26Emacs中那些不常用的行操作命令.org][2016-12-26Emacs中那些不常用的行操作命令]]
    + [[./articles/2017-01-02Emacs作为图片浏览器.org][2017-01-02Emacs作为图片浏览器]]
    + [[./articles/2017-01-09如何玩转tramp%3F.org][2017-01-09如何玩转tramp?]]
+   + [[./articles/2017-01-16Emacs查看日志常用命令.org][2017-01-16Emacs查看日志常用命令]]
