多线程与异步

--- a/tougao/Emacs26我们最大的期待是？.org
+++ b/tougao/Emacs26我们最大的期待是？.org
@@ -14,4 +14,17 @@
 * 前言
   春节刚过，小编在这里给大家拜年了，祝大家在新的一年里学习进步，事业有成！在刚刚过去的
   2016年里，Emacs 25版本发布了。按照每年发布一个大版本的惯例，在2017年里，期望
-  Emacs 26版本早点发布。
+  Emacs 26版本早点发布。那么，你最期待的Emacs 26有哪些特性呢？不忙你说，小编最期待
+  的特性是多线程。年初的时候，多线程的特性已经合入到Master分支。不过，之前多线程在Mac
+  下有一个致命的问题：一旦调用 *make-thread* 就会导致CPU飙升至100%，Emacs卡死。
+  春节过后，小编又试了下最新的Emacs 26的包，发现，那个致命的BUG得到了修复，在Mac下
+  能正常跑多线种代码。那么，今天我们简单聊聊Emacs 26的多线程。
+
+* 多线程与异步
+  在Emacs没提供多线程的特性的时候，如果开发者想使用异步的包，那可以采用async
+  (链接为:https://github.com/jwiegley/emacs-async)。这种异步采用的是创建一个
+  独立的子进程进行后台操作。这种异步方式最大的缺点是新的子进程远程与Emacs主进程共享
+  上下文（如共享变量）,它完全是独立的。相反，多线程的方式有一个优点就是，多个线程间
+  共享同一个上下文，可修改同一个变量。。但有的人认为创建子进程这种异步才是正常的异步
+  方式，因为考虑如果采用多线程的方式会产生多个线程同步修改同个变量(或者Buffer)
+  导致Emacs行为诡异。
