--- a/tougao/Emacs26我们最大的期待是？.org
+++ b/tougao/Emacs26我们最大的期待是？.org
@@ -14,7 +14,7 @@
 * 前言
   春节刚过，小编在这里给大家拜年了，祝大家在新的一年里学习进步，事业有成！在刚刚过去的
   2016年里，Emacs 25版本发布了。按照每年发布一个大版本的惯例，在2017年里，期望
-  Emacs 26版本早点发布。那么，你最期待的Emacs 26有哪些特性呢？不忙你说，小编最期待
+  Emacs 26版本早点发布。那么，你最期待的Emacs 26有哪些特性呢？不盲你说，小编最期待
   的特性是多线程。年初的时候，多线程的特性已经合入到Master分支。不过，之前多线程在Mac
   下有一个致命的问题：一旦调用 *make-thread* 就会导致CPU飙升至100%，Emacs卡死。
   春节过后，小编又试了下最新的Emacs 26的包，发现，那个致命的BUG得到了修复，在Mac下
