--- a/tougao/Emacs26我们最大的期待是？.org
+++ b/tougao/Emacs26我们最大的期待是？.org
@@ -28,3 +28,22 @@
   共享同一个上下文，可修改同一个变量。。但有的人认为创建子进程这种异步才是正常的异步
   方式，因为考虑如果采用多线程的方式会产生多个线程同步修改同个变量(或者Buffer)
   导致Emacs行为诡异。
+
+* 安装Emacs 26开发版
+  要想在Emacs 26发布之前使用多线程的功能，必需升级Emacs到最新的开发版本。Mac环境下，
+  下载Daily Build的开发版本，地址为：https://emacsformacosx.com/builds 。我
+  下载的是2017-02-04这天的Daily Build开发版。
+
+  如果是Linux环境，可以自己下载源代码进行源码编译安装。
+  (源码下载: git clone --depth 1 git://git.sv.gnu.org/emacs.git)
+
+* 尝鲜Emacs多线程
+  安装好最新版本的Emacs后，下面我们下尝试下多线程。创建新的线程的函数是
+  *make-thread* ，这个函数的定义如下：
+
+  #+BEGIN_SRC emacs-lisp
+  (make-thread FUNCTION &optional NAME)
+  #+END_SRC
+
+  它的作用是创建一个新的线程，然后在这个线程中执行FUNCTION这个函数，当函数执行完成
+  后退出时，这个线程就结束了。 NAME这个字符串参数是一个可选的，对这个线程进行命名。
